--- a/src/SampSharp.Streamer.Entities/SampSharp.Streamer.Entities.csproj
+++ b/src/SampSharp.Streamer.Entities/SampSharp.Streamer.Entities.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Title>Streamer Wrapper for SampSharp.Entities</Title>
     <Description>A SampSharp wrapper for Incognito's streamer plugin.</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SampSharp.Entities" Version="0.10.0" />
+    <ProjectReference Include="..\..\..\SampSharp\src\SampSharp.Entities\SampSharp.Entities.csproj" />
   </ItemGroup>
 
 </Project>
